--- a/Cargo.toml
+++ b/Cargo.toml
@@ -11,7 +11,9 @@ path = "src/main.rs"
 edition = "2021"
 version = "0.1.0"
 
+
 [workspace]
+default-members = ["x-cli"]
 members = [
     "x-codegen",
     "x-parser",
@@ -23,8 +25,7 @@ members = [
 [workspace.dependencies]
 anyhow = "1.0.95"
 clap = { version = "4.5.27", features = ["derive"] }
-inkwell = { version = "0.5.0", features = ["llvm18-0"] }
-llvm-sys = "150.0.0"
+inkwell = { version = "0.6.0", features = ["llvm18-1"] }
 thiserror = "2.0.11"
 tracing = "0.1.41"
 tracing-subscriber = { version = "0.3.19", features = ["env-filter"] }
